# iMLProject_GeopoliticalBias

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
data/dictionaries/: stereotype_dimensions_dictionary.csv
data/examples/: dictionary_examples.txt  generated_examples.txt
data/populations/: names.json  terms.json
geobias/: generation.py  geobias.py  pipeline.py  plotting.py  utils.py
geobias/configs/: base.yaml  generation.yaml  pipeline.yaml
geobias/configs/model/: euro_instruct.yaml  euro_medium_instruct  llama.yaml  llama_instruct.yaml  llama_medium.yaml  llama_medium_instruct.yaml  minilingua-instruct.yaml  minilingua.yaml  mistral_instruct.yaml  qwen.yaml  qwen_big.yaml  qwen_medium.yaml
geobias/configs/models/: qwen.yaml
geobias/configs/primer/: conservative.yaml  freedom.yaml  liberal.yaml
geobias/configs/prompt/system/: your_country.yaml
geobias/configs/prompt/user/: taiwan.yaml  ukraine.yaml
